# AGI

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
.claude/skills/: arc-agi-3-solver.md
.nightshift/: config.yaml
AGI/: README.md
AGI/01-competition-overview/: competition-rules-and-format.md
AGI/02-foundational-papers/: foundational-research-notes.md
AGI/03-winning-solutions/: QUICK_REFERENCE.md  README.md  winning-solutions-analysis.md
AGI/04-test-time-training/: ttt-approaches-notes.md
AGI/05-program-synthesis/: program-synthesis-notes.md
AGI/06-llm-approaches/: README.md  llm-and-neurosymbolic-notes.md
AGI/07-neural-approaches/: neural-approaches-notes.md
AGI/08-neuro-symbolic/: human-cognition-and-agent-design.md
AGI/09-o3-analysis/: o3-breakthrough-analysis.md
AGI/10-community-insights/: blog-posts-and-analyses.md
AGI/11-tools-and-repos/: github-repos-inventory.md
AGI/12-strategy/: COMPETITION-STRATEGY.md
agents/: __init__.py  agent.py  astar_agent.py  bfs_agent.py  dfs_agent.py  heuristics.py  random_agent.py  structs.py
kaggle/: submit.py
scripts/: benchmark.sh  replay.py  swarm.py
tests/: test_astar_agent.py  test_bfs_agent.py  test_dfs_agent.py  test_heuristics.py  test_structs.py
